Add trendline and fix template

--- a/template.html
+++ b/template.html
@@ -18,7 +18,7 @@
             font-size: 200%;
             font-weight: bold;
             position: relative;
-            top: -5px;
+            top: -6px;
             margin-bottom: -4px;
         }
 	</style>
@@ -54,17 +54,17 @@
 				<!-- vaccinesPerDay -->
 				
 				vaccini al giorno.</span> <br />
-			Continuando di questo passo, raggiungeremo l'immunità di gregge il: <br />
+			Continuando di questo passo, raggiungeremo l'immunità di gregge il <br />
 			<span class="text-bigger">
 				<!-- hitDate -->
 				<span class="d-none d-sm-inline">
 				<!-- hitHour -->
 				</span>
 			</span> <br />
-			<span style="position: relative; top: -4px">ovvero fra</span> <br />
-			<span class="text-bigger" style="position: relative; top: -12px;">
+			<span style="position: relative; top: -5px">ovvero fra</span> <br />
+			<span class="text-bigger" style="position: relative; top: -13px;">
 				<!-- daysRemaining -->
-				giorni
+				giorni.
 			</span>
 		</div>
 		<img alt="Grafico vaccini ultima settimana" src="plot.png" class="img-fluid">
