--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             font-size: 200%;
             font-weight: bold;
             position: relative;
-            top: -5px;
+            top: -6px;
             margin-bottom: -4px;
         }
 	</style>
@@ -43,29 +43,29 @@
 		<div class="text-center">
 			In Italia ci sono <br />
 			<span class="text-big">
-185748
+259481
 				persone vaccinate.</span> <br />
 			Ne abbiamo vaccinate <br />
 			<span class="text-big">
-177011
+249567
 				nell'ultima settimana,</span> <br />
 			con un ritmo di <br />
 			<span class="text-big">
 				
-25287
+35652
 				
 				vaccini al giorno.</span> <br />
-			Continuando di questo passo, raggiungeremo l'immunità di gregge il: <br />
+			Continuando di questo passo, raggiungeremo l'immunità di gregge il <br />
 			<span class="text-bigger">
-30/03/2026
+20/09/2024
 				<span class="d-none d-sm-inline">
-15:56:23
+09:50:09
 				</span>
 			</span> <br />
-			<span style="position: relative; top: -4px">ovvero fra</span> <br />
-			<span class="text-bigger" style="position: relative; top: -12px;">
-1909
-				giorni
+			<span style="position: relative; top: -5px">ovvero fra</span> <br />
+			<span class="text-bigger" style="position: relative; top: -13px;">
+1354
+				giorni.
 			</span>
 		</div>
 		<img alt="Grafico vaccini ultima settimana" src="plot.png" class="img-fluid">
