--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-	<title>Quanto manca?</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Quando torneremo alla normalità? Analisi dei dati della campagna vaccinale in Italia.">
+	<meta name="keywords" content="COVID 19, coronavirus, vaccini, vaccinazioni">
+	
+	<title>Quanto manca?</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
 	      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<style>
@@ -51,9 +54,7 @@
 				nell'ultima settimana,</span> <br />
 			con un ritmo di <br />
 			<span class="text-big">
-				
 35652
-				
 				vaccini al giorno.</span> <br />
 			Continuando di questo passo, raggiungeremo l'immunità di gregge il <br />
 			<span class="text-bigger">
