--- a/template.html
+++ b/template.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-	<title>Quanto manca?</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Quando torneremo alla normalità? Analisi dei dati della campagna vaccinale in Italia.">
+	<meta name="keywords" content="COVID 19, coronavirus, vaccini, vaccinazioni">
+	
+	<title>Quanto manca?</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
 	      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 	<style>
