--- a/template.html
+++ b/template.html
@@ -73,5 +73,7 @@
 			I dati non comprendono quelli del giorno attuale perché solitamente incompleti.
 		</p>
 	</div>
+	
+	<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "96853dc5b3c74d51a725fb49f71285aa"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
