--- a/template.html
+++ b/template.html
@@ -73,6 +73,14 @@
 			I dati non comprendono quelli del giorno attuale perché solitamente incompleti.
 		</p>
 	</div>
+	<div class="container-fluid mt-2 pb-4">
+		<hr />
+		<div class="container pt-2 px-xl-5">
+			Creato da <a href="https://marcoaceti.it">Marco Aceti</a>. <br />
+			Questo è software libero. Puoi visualizzare, copiare, ridistribuire, forkare il codice sorgente
+			seguendo i termini della licenza su <a href="https://github.com/MarcoBuster/quanto-manca">GitHub</a>.
+		</div>
+	</div>
 	
 	<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "96853dc5b3c74d51a725fb49f71285aa"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
