--- a/template.html
+++ b/template.html
@@ -76,7 +76,10 @@
 	<div class="container-fluid mt-2 pb-4">
 		<hr />
 		<div class="container pt-2 px-xl-5">
-			Creato da <a href="https://marcoaceti.it">Marco Aceti</a>. <br />
+			Creato con &hearts; da <a href="https://marcoaceti.it">Marco Aceti</a>
+			(<a href="https://github.com/MarcoBuster">GitHub</a>,
+			<a href="https://t.me/MarcoBuster">Telegram</a>,
+			<a href="mailto:quantomanca@marco.anonaddy.com">email</a>). <br />
 			Questo è software libero. Puoi visualizzare, copiare, ridistribuire, forkare il codice sorgente
 			seguendo i termini della licenza su <a href="https://github.com/MarcoBuster/quanto-manca">GitHub</a>.
 		</div>
