Add margin before FAQs

--- a/template.html
+++ b/template.html
@@ -70,7 +70,7 @@
 		</div>
 		<img alt="Grafico vaccini ultima settimana" src="plot.png" class="img-fluid">
 		
-		<h3>Frequently Asked Questions</h3>
+		<h3 class="mt-2">Frequently Asked Questions</h3>
 		<p>
 			<b><i>Perché i dati non sono aggiornati ad oggi?</i></b> <br />
 			I dati del giorno attuale sono (per ovvi motivi) incompleti, quindi vengono ignorati.
