Add plot image cache invalidation

--- a/template.html
+++ b/template.html
@@ -68,7 +68,9 @@
 				giorni.
 			</span>
 		</div>
-		<img alt="Grafico vaccini ultima settimana" src="plot.png" class="img-fluid">
+		<img alt="Grafico vaccini ultima settimana" src="
+		plot.png
+		" class="img-fluid">
 		
 		<h3 class="mt-2">Frequently Asked Questions</h3>
 		<p>
