Add vaccinations over population percentage

--- a/template.html
+++ b/template.html
@@ -27,7 +27,7 @@
 	</style>
 </head>
 <body>
-	<div class="container mt-4 pt-2 px-xl-5">
+	<div class="container mt-2 pt-2 px-xl-5">
 		<h1>Quando torneremo alla normalità?</h1>
 		<p>
 			La domanda non ha una risposta precisa.
@@ -47,6 +47,11 @@
 			<span class="text-big">
 				<!-- totalVaccinations -->
 				persone vaccinate.</span> <br />
+			che corrispondono al <br />
+			<span class="text-big">
+				<!-- totalVaccinationsPerc -->
+				della popolazione.
+			</span> <br />
 			Ne abbiamo vaccinate <br />
 			<span class="text-big">
 				<!-- totalVaccinationsLastWeek -->
@@ -63,7 +68,7 @@
 				</span>
 			</span> <br />
 			<span style="position: relative; top: -5px">ovvero fra</span> <br />
-			<span class="text-bigger" style="position: relative; top: -13px;">
+			<span class="text-bigger" style="position: relative; top: -15px;">
 				<!-- daysRemaining -->
 				giorni.
 			</span>
