--- a/template.html
+++ b/template.html
@@ -46,7 +46,7 @@
 			In Italia ci sono <br />
 			<span class="text-big">
 				<!-- totalVaccinations -->
-				persone vaccinate.</span> <br />
+				persone vaccinate</span> <br />
 			che corrispondono al <br />
 			<span class="text-big">
 				<!-- totalVaccinationsPerc -->
