--- a/template.html
+++ b/template.html
@@ -221,6 +221,6 @@
 		</div>
 	</div>
 	
-	<!-- Cloudflare Web Analytics <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "9a54301e14254460a8e8229b65ddb3ee"}'></script><!-- End Cloudflare Web Analytics -->
+	<!-- Cloudflare Web Analytics --> <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "9a54301e14254460a8e8229b65ddb3ee"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
