--- a/template.html
+++ b/template.html
@@ -9,10 +9,13 @@
 	<title>Quanto manca?</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-	<link rel="stylesheet" href="jquery-jvectormap-2.0.5.css" type="text/css" media="screen" />
-	<script src="jquery.js"></script>
-	<script src="jquery-jvectormap-2.0.5.min.js"></script>
-	<script src="jquery-jvectormap-it_regions-mill.js"></script>
+	
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script> 
+	
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jvectormap@2.0.4/jquery-jvectormap.css">	
+	<script src="https://cdn.jsdelivr.net/npm/jvectormap@2.0.4/jquery-jvectormap.min.js"></script> 
+	<script src="https://jvectormap.com/js/jquery-jvectormap-it_regions-mill.js"></script>
 	<style>
 		.text-big {
 			font-size: 130%;
