Hot fix dark mode

--- a/template.html
+++ b/template.html
@@ -44,6 +44,15 @@
             top: -6px;
             margin-bottom: -4px;
         }
+        .darkmode--activated .text-bigger {
+            color: white;
+        }
+        .darkmode--activated .text-big {
+	        color: white;
+        }
+        .darkmode--activated .text {
+	        color: #ccc8c4;
+        }
 	</style>
 </head>
 <body>
@@ -87,7 +96,7 @@
 				<!-- hitHour -->
 				</span>
 			</span> <br />
-			<span style="position: relative; top: -5px">ovvero fra</span> <br />
+			<span class="text" style="position: relative; top: -5px">ovvero fra</span> <br />
 			<span class="text-bigger" style="position: relative; top: -15px;">
 				<!-- daysRemaining -->
 				giorni.
