Count vaccinated people (with two doses)
...instead of counting the number of vaccines

--- a/template.html
+++ b/template.html
@@ -88,7 +88,7 @@
 			con un ritmo di <br />
 			<span class="text-big">
 				<!-- vaccinesPerDay -->
-				vaccini al giorno.</span> <br />
+				vaccinati al giorno.</span> <br />
 			Continuando di questo passo, raggiungeremo l'immunità di gregge il <br />
 			<span class="text-bigger">
 				<!-- hitDate -->
@@ -102,7 +102,7 @@
 				giorni.
 			</span>
 		</div>
-		<img alt="Grafico vaccini ultima settimana" src="
+		<img alt="Grafico vaccinati ultima settimana" src="
 		plot.png
 		" class="img-fluid">
 		
@@ -113,12 +113,8 @@
 		</p>
 		<p>
 			<b><i>Le dosi sono due, devi raddoppiare il numero di giorni!</i></b> <br />
-			Secondo le indicazioni ufficiali, una persona per essere vaccinata con il vaccino Pfizer/Biontech
-			deve aver ricevuto due dosi. Altri vaccini (in fase di produzione o approvazione), però, non hanno questo
-			requisito. Inoltre, sembra si stia valutando di dimezzare le dosi per garantirne una seconda
-			a tutti. Insomma, il concetto stesso di <i>persona vaccinata</i> <b>è complicato</b>. <br />
-			Se in futuro verrà aggiunto un campo nel dataset che tiene precisamente traccia delle persone vaccinate,
-			il progetto userà quello. Nel mentre, ci accontentiamo di questo.
+			<u>Dal 27 gennaio 2021 il sito mostra esclusivamente i dati
+			   delle <b>persone vaccinate</b>, ovvero chi ha ricevuto sia la prima che la seconda dose.</u>
 		</p>
 		<p>
 			<b><i>Perché consideri solo i dati dell'ultima settimana?</i></b> <br />
@@ -126,8 +122,9 @@
 			analisi di questo tipo.
 		</p>
 		<p>
-			<b><i>I vaccini fanno X! &Egrave; tutto un complotto Y!</i></b> <br />
-			Non mi interessa della tua opinione e non mi interessa discutere con te. Mi spiace.
+			<b><i>I vaccini fanno X! Non ne usciremo mai!</i></b> <br />
+			Non mi interessa della tua opinione e non mi interessa discutere con te.
+			Questo sito vuole solo mostrare i dati come stanno, senza nessuna polemica o allusione.
 		</p>
 		<p>
 			<b><i>Il progetto è open-source?</i></b> <br />
